syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.protobufferstest.GRPCautogenerated.com.example.grpc.generated";

option java_outer_classname = "OrderServiceProto";

service OrderService {
  rpc CreateOrder (GrpcOrder) returns (OrderResponse);
  rpc GetOrder (OrderRequest) returns (GrpcOrder);
  rpc UpdateOrder (GrpcOrder) returns (OrderResponse);
  rpc DeleteOrder (OrderRequest) returns (OrderResponse);

  rpc AddInventory (GrpcInventory) returns (InventoryResponse);
  rpc GetInventory (InventoryRequest) returns (GrpcInventory);
  rpc UpdateInventory (GrpcInventory) returns (InventoryResponse);
  rpc DeleteInventory (InventoryRequest) returns (InventoryResponse);

  rpc LinkOrderToInventory (LinkRequest) returns (LinkResponse);
}

message GrpcOrder {
  int64 id = 1;
  int64 booking_id = 2;
  int64 service_provider_id = 3;
  int64 service_id = 4;
  double total_amount = 5;
}

message GrpcInventory {
  int64 id = 1;
  string name = 2;
  int64 service_provider_id = 3;
  int64 quantity = 4;
  repeated GrpcOrder orders = 5;
}

message OrderRequest {
  int64 id = 1;
}

message InventoryRequest {
  int64 id = 1;
}

message OrderResponse {
  string message = 1;
}

message InventoryResponse {
  string message = 1;
}

message LinkRequest {
  int64 order_id = 1;
  int64 inventory_id = 2;
}

message LinkResponse {
  string message = 1;
}
